--- a/package.json
+++ b/package.json
@@ -23,8 +23,12 @@
   ],
   "repository": {
     "type" : "git",
-    "url" : "https://github.com/micnil/vscode-diff"
+    "url" : "https://github.com/micnil/vscode-diff.git"
   },
+  "bugs": {
+    "url": "https://github.com/micnil/vscode-diff/issues"
+  },
+  "homepage": "https://github.com/micnil/vscode-diff",
   "author": "Michael Nilsson <michaelnilsson90@hotmail.com>",
   "license": "MIT"
 }
