--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "vscode-diff",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "Diff utility used in the Visual Studio Code source.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "dependencies": {},
   "devDependencies": {
-    "@types/assert": "^1.4.0",
-    "@types/mocha": "^5.2.5",
-    "assert": "^1.4.1",
-    "mocha": "^5.2.0",
+    "@types/assert": "^1.5.4",
+    "@types/mocha": "^8.2.0",
+    "assert": "^2.0.0",
+    "mocha": "^8.2.1",
     "ts-node": "^7.0.1",
-    "typescript": "^3.1.3"
+    "typescript": "^4.2.4"
   },
   "scripts": {
     "test": "mocha -u tdd --require ts-node/register test/**/*.ts",
@@ -29,6 +29,6 @@
     "url": "https://github.com/micnil/vscode-diff/issues"
   },
   "homepage": "https://github.com/micnil/vscode-diff",
-  "author": "Michael Nilsson <michaelnilsson90@hotmail.com>",
+  "author": "Michael Nilsson <michael@nilsson.dev>",
   "license": "MIT"
 }
