--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,20 @@
 {
     "compilerOptions": {
-      "target": "es5",
+      "target": "ES2015",
+      "lib": [
+        "es2019",
+        "DOM"
+      ],
       "module": "commonjs",
       "declaration": true,
       "outDir": "./dist",
       "strict": true,
-      "strictNullChecks": false
+      "strictNullChecks": false,
+      "paths": {
+        "vs/*": [
+          "./src/vs/*"
+        ],
+      }
     },
     "include": [
       "src/**/*"
