--- a/package.json
+++ b/package.json
@@ -4,18 +4,20 @@
   "description": "Diff utility used in the Visual Studio Code source.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "dependencies": {},
   "devDependencies": {
     "@types/assert": "^1.5.6",
     "@types/mocha": "^9.1.1",
     "assert": "^2.0.0",
     "mocha": "^9.2.2",
     "ts-node": "^10.9.1",
-    "typescript": "^5.0.4"
+    "typescript": "^5.0.4",
+    "unimported": "^1.29.2"
   },
   "scripts": {
     "test": "mocha -u tdd --require ts-node/register test/**/*.ts",
-    "build": "tsc"
+    "watch": "tsc --watch",
+    "build": "tsc",
+    "unimported": "unimported"
   },
   "keywords": [
     "diff",
