Fix mocha testing and add example
Fix running mocha test. Also add example from README and npm script to
run it.

--- a/.unimportedrc.json
+++ b/.unimportedrc.json
@@ -1,7 +1,16 @@
 {
-  "entry": ["src/index.ts"],
+  "entry": [
+    "src/index.ts"
+  ],
   "rootDir": "./src",
   "aliases": {
-    "vs/*": ["./vs/*"]
-  }
+    "vs/*": [
+      "./vs/*"
+    ]
+  },
+  "ignoreUnresolved": [],
+  "ignoreUnused": [],
+  "ignoreUnimported": [
+    "src/example.ts"
+  ]
 }
