--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,11 +10,13 @@
       "outDir": "./dist",
       "strict": true,
       "useUnknownInCatchVariables": false,
+      "baseUrl": "./src",
       "paths": {
-        "vs/*": [
-          "./src/vs/*"
-        ],
+        "vscode-diff": ["./"],
       }
+    },
+    "ts-node": {
+      "require": ["tsconfig-paths/register"]
     },
     "include": [
       "src/**/*"
