--- a/package.json
+++ b/package.json
@@ -7,18 +7,18 @@
   "devDependencies": {
     "@types/assert": "^1.5.6",
     "@types/mocha": "^9.1.1",
-    "assert": "^2.0.0",
+    "assert": "^2.1.0",
+    "knip": "^2.25.2",
     "mocha": "^9.2.2",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.0.4",
-    "unimported": "^1.29.2"
+    "typescript": "^5.2.2"
   },
   "scripts": {
     "test": "mocha -u tdd --require ts-node/register src/**/test/**/*.ts",
     "watch": "tsc --watch",
     "build": "tsc",
-    "unimported": "unimported",
+    "knip": "knip",
     "example": "ts-node src/example.ts"
   },
   "keywords": [
