Make import relative instead of absolute.
Cant make it work after building otherwise:
https://github.com/microsoft/TypeScript/issues/15479

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "watch": "tsc --watch",
     "build": "tsc --project tsconfig.build.json",
     "knip": "knip",
-    "example": "ts-node src/example.ts"
+    "example": "yarn build && ts-node ./example/example.ts"
   },
   "keywords": [
     "diff",
