--- a/package.json
+++ b/package.json
@@ -8,17 +8,21 @@
     "@types/assert": "^1.5.6",
     "@types/mocha": "^9.1.1",
     "assert": "^2.1.0",
+    "eslint": "^9.39.1",
     "knip": "^5.67.1",
     "mocha": "^9.2.2",
+    "remove-unused-vars": "^0.0.9",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.46.3"
   },
   "scripts": {
     "test": "mocha -u tdd --require ts-node/register src/**/test/**/*.ts",
     "watch": "tsc --watch",
     "build": "tsc --project tsconfig.build.json",
     "knip": "knip",
+    "cleanup": "eslint --quiet -f json | remove-unused-vars",
     "example": "yarn build && ts-node ./example/example.ts"
   },
   "keywords": [
