Fix issues again and add typecheck script

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "build": "tsc --project tsconfig.build.json",
     "knip": "knip",
     "cleanup": "eslint --quiet -f json | remove-unused-vars",
-    "example": "yarn build && ts-node ./example/example.ts"
+    "example": "yarn build && ts-node ./example/example.ts",
+    "typecheck": "tsc --noEmit"
   },
   "keywords": [
     "diff",
