--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
 		"outDir": "./dist",
 		"strict": true,
 		"useUnknownInCatchVariables": false,
+		"skipLibCheck": true
 	},
 	"include": [
 		"src/**/*",
