--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
 		],
 		"module": "commonjs",
 		"declaration": true,
+		"esModuleInterop": true,
 		"outDir": "./dist",
 		"strict": true,
 		"useUnknownInCatchVariables": false,
